--- a/faq-accordion-card-main/index.html
+++ b/faq-accordion-card-main/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./style/styles.css">
   <title>Frontend Mentor | FAQ Accordion Card</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -14,27 +16,47 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
-<body>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
-
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
-
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
-
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
-
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+<body >
+  <main class="container">
+    <div class="container1">
+      <!-- <img src="./images/bg-pattern-desktop.svg" alt=""> -->
+      <img class="imagem" src="./images/illustration-woman-online-desktop.svg" alt="">
+      <!-- <img src="./images/illustration-box-desktop.svg" alt=""> -->
+    </div>
+    <div class="container2">
+      <h1 class="title">FAQ</h1>
+      <div class="quest">
+        <h4> <button  class="subtitle" aria-controls="pergunta1" aria-expanded="true"> How many team members can I invite?</button>  </h4>
+        <img class="arrow " src="./images/icon-arrow-down.svg" width="14px" height="9px"alt="" srcset="">
+      </div>
+      <p id="pergunta1" class="texto">
+        You can invite up to 2 additional users on the Free plan. There is no limit on 
+        team members for the Premium plan.
+      </p>
+      <div class="quest">
+    <h4> <button  class="subtitle" aria-controls="pergunta2" aria-expanded="true">What is the maximum file upload size?</button>   </h4>
+    <img class="arrow" src="./images/icon-arrow-down.svg" width="14px" height="9px"alt="" srcset="">
   </div>
+    <p class="texto" id="pergunta2"> No more than 2GB. All files in your account must fit your allotted storage space. </p>
+    
+    <div class="quest">
+      <h4> <button aria-controls="pergunta3" aria-expanded="true"  class="subtitle">How do I reset my password?</button>   </h4>
+      <img class="arrow" src="./images/icon-arrow-down.svg" width="14px" height="9px"alt="" srcset="">
+    </div>
+     <p class="texto" id="pergunta3"> Click “Forgot password” from the login page or “Change password” from your profile page.
+      A reset link will be emailed to you.</p>
+      <div class="quest">
+        <h4> <button  class="subtitle" aria-controls="pergunta4" aria-expanded="true">Can I cancel my subscription?</button>  </h4>
+        <img class="arrow"  src="./images/icon-arrow-down.svg" width="14px" height="9px"alt="" srcset="">
+      </div>
+      <p class="texto" id="pergunta4">Yes! Send us a message and we’ll process your request no questions asked.</p>
+      <div class="quest">
+        <h4> <button  class="subtitle" aria-controls="pergunta5" aria-expanded="true">Do you provide additional support?</button> </h4>
+        <img class="arrow" src="./images/icon-arrow-down.svg" width="14px" height="9px"alt="" srcset="">
+      </div>
+      <p class="texto" id="pergunta5">chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+    </div>
+</main>
+<script src="./quest.js"></script>
 </body>
 </html>
